<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/msg_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/btn_chat_send"
            android:layout_weight="0.7"
            android:hint="Input message" />

        <Button
            android:id="@+id/btn_chat_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@color/colorAccent"
            android:text="Send"
            android:textColor="@color/white" />

        <ListView
            android:id="@+id/list_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="false"
            android:layout_alignParentTop="false"
            android:layout_below="@+id/group_name"
            android:layout_marginBottom="20dp"
            android:layout_above="@+id/msg_type"
            android:layout_marginTop="10dp"
            android:listSelector="@android:color/transparent"
            android:transcriptMode="alwaysScroll"
            android:stackFromBottom="true"
            android:divider="@null" />

        <TextView
            android:id="@+id/group_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="?attr/actionBarSize"
            android:layout_gravity="left|center_vertical"
            android:textSize="20sp" />

<!--        hide for transport user id-name pair data-->
        <TextView
            android:id="@+id/users"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="?attr/actionBarSize"
            android:layout_alignParentRight="true"
            android:textSize="20sp"
            android:visibility="gone"/>

    </RelativeLayout>
</LinearLayout>